<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/homepage_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/homepage_padding"
                android:src="@drawable/reno" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/homepage_padding"
                android:text="@string/reno_description"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/homepage_padding"
                android:src="@drawable/reno1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/homepage_padding"
                android:text="@string/reno_description2"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/homepage_padding"
                android:src="@drawable/reno2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/homepage_padding"
                android:text="@string/reno_description3"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/homepage_padding"
                android:src="@drawable/reno4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/homepage_padding"
                android:text="@string/reno_description4"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>